# ph-ensemble-gnn

./: .gitignore  README.md  pyproject.toml  setup.py
configs/earthquake_regression/central_it/: baseline.yml
configs/earthquake_regression/central_it/max/: max_0-1.yml  max_0.yml  max_1.yml
configs/earthquake_regression/central_it/mean/: avg_0-1.yml  avg_0.yml  avg_1.yml
configs/earthquake_regression/central_it/weighted/: weighted_0-1.yml  weighted_0.yml  weighted_1.yml
configs/earthquake_regression/central_it/windows/: window_1000.yml  window_400.yml  window_500.yml  window_600.yml  window_700.yml  window_800.yml  window_900.yml
configs/earthquake_regression/central_west_it/: baseline.yml
configs/earthquake_regression/central_west_it/max/: max_0-1.yml  max_0.yml  max_1.yml
configs/earthquake_regression/central_west_it/mean/: avg_0-1.yml  avg_0.yml  avg_1.yml
configs/earthquake_regression/central_west_it/weighted/: weighted_0-1.yml  weighted_0.yml  weighted_1.yml
configs/earthquake_regression/central_west_it/windows/: window_1000.yml  window_400.yml  window_500.yml  window_600.yml  window_700.yml  window_800.yml  window_900.yml
configs/traffic/metr_la/: weighted_0-1.yml  weighted_0.yml  weighted_1.yml
configs/traffic/pems_bay/: weighted_0-1_k150.yml  weighted_0_k150.yml  weighted_1.yml
experiments/: train_forecasting.py  train_regression.py
src/: utils.py
src/datamodules/: forecasting.py  kfold_regression.py
src/models/forecasting/: aggregators_forecasting.py  modules.py
src/models/regressions/: aggregators.py  avwgcn.py  baseline.py
